# NOTE: THIS FILE IS EXPERIMENTAL FOR THE BAZEL MIGRATION AND NOT USED FOR
# YOUR BUILDS CURRENTLY.
#
# It is not yet the source of truth for your build. If you're looking to modify
# the build file, modify the Android.bp file instead. Do *not* modify this file
# unless you have coordinated with the team managing the Soong to Bazel
# migration.

load("//build/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "mali_kbase.slider",
    srcs = glob([
        "**/*.c",
        "**/*.h",
        "**/Kbuild",
    ]) + [
        "//gs/google-modules/gpu/common:headers",
    ],
    outs = [
        "mali_kbase.ko",
    ],
    kernel_build = "//gs/kernel/device-modules:slider",
    visibility = [
        "//gs/kernel/device-modules:__pkg__",
    ],
)
